fix timeline map overlap/sizing issues

--- a/app/styles/timeline.scss
+++ b/app/styles/timeline.scss
@@ -2,23 +2,31 @@ $timeline-panel-width: 500px;
 $timeline-panel-switch-width: 600px;
 
 .timeline-container {
-  display: flex;
-  flex-direction: row;
   height: 100%;
   position: relative;
+  overflow: hidden;
+  &.details{
+    display: flex;
+    flex-direction: row;
+  }
 }
 
 .timeline-map{
-  position: absolute;
-  width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
+  order: 2;
+  &.simple{
+    width: 100%;
+    position: absolute;
+    height: 100%;
+  }
   &.details{
+    display: none;
     @media (min-width: $timeline-panel-switch-width) {
+      display: block;
+      width: auto;
       position: static;
-      width: calc(100% - #{$timeline-panel-width});
-      order: 2;
+      flex: 1;
     }
   }
 }
@@ -28,19 +36,20 @@ $timeline-panel-switch-width: 600px;
   .map-container{
     height: 100%;
   }
-}
 
-.ol-zoom{
-  top: 1.5em;
-  left: auto;
-  bottom: auto;
-  right: 1.0em;
+  .ol-zoom{
+    top: auto;
+    left: 1.0em;
+    bottom: 1.5em;
+    right: auto;
+  }
 }
 
 .timeline-panel{
   top: 0;
   margin: 0;
   padding: 0;
+  order: 1;
   @media (min-width: $timeline-panel-switch-width) {
     width: $timeline-panel-width;
   }
@@ -49,7 +58,6 @@ $timeline-panel-switch-width: 600px;
   flex-direction: column;
   position: relative;
   &.details{
-    order: 1;
     height: 100%;
   }
 }
@@ -63,10 +71,10 @@ $timeline-panel-switch-width: 600px;
   overflow: auto;
   overflow-x: hidden;
   position: relative;
-  left: -$timeline-panel-switch-width;
+  display: none;
   height: 100%;
   &.details{
-    left: 0;
+    display: block;
   }
   -webkit-transition: opacity .218s cubic-bezier(0.4,0.0,0.2,1);
   -moz-transition: opacity .218s cubic-bezier(0.4,0.0,0.2,1);
